--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,7 @@
     width: 48px;
     height: 48px;
     border-radius: 50%;
-    background: rgba(255,255,255,0.4);
-    color: #333;
+	background-color:rgba(255, 255, 255, 0.8);
     border: none;
     font-size: 24px;
     cursor: pointer;
