--- a/styles.css
+++ b/styles.css
@@ -78,16 +78,14 @@
   position: absolute;
   top: 12px;
   right: 12px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  width: 80px;
+  height: 30px;
   background: rgba(255,255,255,0.85);
-  color: #333;
-  border: none;
-  font-size: 22px;
+  color: rgba(128, 128, 128, 0.492);
+  font-size: 15px;
   box-shadow: 0 1px 5px rgba(0,0,0,0.07);
   cursor: pointer;
-  display: none; /* 默认隐藏，由js控制 */
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: 10;
@@ -95,6 +93,7 @@
 }
 .plugin-image-setting-btn:hover {
   background: rgba(255,255,255,1);
+color: gray;
 }
 .plugin-image-container {
 	display: flex;
