add setting panel

--- a/styles.css
+++ b/styles.css
@@ -74,27 +74,6 @@
 	border: 1px solid #ccc;
 }
 
-.plugin-image-setting-btn {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  width: 80px;
-  height: 30px;
-  background: rgba(255,255,255,0.85);
-  color: rgba(128, 128, 128, 0.492);
-  font-size: 15px;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.07);
-  cursor: pointer;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-  transition: background 0.15s;
-}
-.plugin-image-setting-btn:hover {
-  background: rgba(255,255,255,1);
-  color: rgba(128, 128, 128, 0.492);
-}
 .plugin-image-container {
 	display: flex;
 	flex-wrap: wrap;
@@ -152,4 +131,33 @@
 }
 .plugin-image-setting-size-radio:hover {
   color: #2350a2;
+}
+
+.plugin-image-setting-btn {
+    position: absolute;
+    top: 9px;
+    right: 35px;
+    color: rgb(97, 97, 97);
+    cursor: pointer;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+}
+
+.plugin-image-setting-btn:hover {
+  background: black;
+}
+
+.icon--settings {
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath d='M14 17H5M19 7h-9'/%3E%3Ccircle cx='17' cy='17' r='3'/%3E%3Ccircle cx='7' cy='7' r='3'/%3E%3C/g%3E%3C/svg%3E");    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
 }
