--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@
   transform: scale(1.1);
 }
 .plugin-image-setting-size-group {
-  margin-top: 5px;
+  margin-bottom: 5px;
   display: flex;
   gap: 13px;
   align-items: center;
