bug fixed: can't change setting line when user click last pic.

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,10 @@
   position: relative;
 }
 
+.plugin-image-row-hidden {
+  display: none !important;
+}
+
 .plugin-image-more-mask {
   pointer-events: all !important ;
   position: absolute;
